[tool.poetry]
name = "Sandboxes"
version = "0.1.0"
description = "It generate dockerized ipython notebooks with nginx for web access"
authors = ["Ting"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
